operator-deploy/sas-bases/overlays/network/route.openshift.io/v1/route/components/sas-catalog-services/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-catalog
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-catalog
    sas.com/admin: namespace
  name: sas-catalog
spec:
  host: $(INGRESS_HOST)
  path: /catalog
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-catalog
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-catalog
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-catalog
    sas.com/admin: namespace
  name: sas-catalog-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /catalog
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-catalog
  wildcardPolicy: Subdomain

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-catalogTableBot
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-catalog-table-bot
    sas.com/admin: namespace
  name: sas-catalog-table-bot
spec:
  host: $(INGRESS_HOST)
  path: /catalogTableBot
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-catalog-table-bot
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-catalogTableBot
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-catalog-table-bot
    sas.com/admin: namespace
  name: sas-catalog-table-bot-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /catalogTableBot
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-catalog-table-bot
  wildcardPolicy: Subdomain

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-glossary
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-glossary
    sas.com/admin: namespace
  name: sas-glossary
spec:
  host: $(INGRESS_HOST)
  path: /glossary
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-glossary
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-glossary
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-glossary
    sas.com/admin: namespace
  name: sas-glossary-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /glossary
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-glossary
  wildcardPolicy: Subdomain

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-relationships
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-relationships
    sas.com/admin: namespace
  name: sas-relationships
spec:
  host: $(INGRESS_HOST)
  path: /relationships
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-relationships
  wildcardPolicy: None

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/timeout: 300s
    router.openshift.io/cookie-same-site: Lax
    router.openshift.io/cookie_name: sas-ocp-relationships
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-relationships
    sas.com/admin: namespace
  name: sas-relationships-multitenant
spec:
  host: wildcard.$(INGRESS_HOST)
  path: /relationships
  port:
    targetPort: http
  to:
    kind: Service
    name: sas-relationships
  wildcardPolicy: Subdomain
